--- a/bookstore/templates/account/login.html
+++ b/bookstore/templates/account/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="col-md-3">
-            <form action="{{ url_for('account.login') }}" method="post" class="form-horizontal" role="form">
+            <form action="{{ url_for('account.login',next=next) }}" method="post" class="form-horizontal" role="form">
                 {{ form.csrf_token }}
                 {{ render_field(form.username) }}
                 {{ render_field(form.password) }}
