--- a/bookstore/templates/layout.html
+++ b/bookstore/templates/layout.html
@@ -12,8 +12,7 @@
           type="text/css"/>
     <link href="{{ url_for('static', filename='css/site.css') }}" rel="stylesheet" type="text/css"/>
     {% block css %}{% endblock %}
-    <script src="{{ url_for('static', filename='lib/juery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='lib/jquery/jquery.tmpl.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/jquery/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/site.js') }}"></script>
 </head>
