--- a/bookstore/templates/layout.html
+++ b/bookstore/templates/layout.html
@@ -18,27 +18,57 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
-    <a class="brand" href="/"></a>
-    <ul class="nav">
-        <li><a href="/gutenberg/">盖世汽车</a></li>
-    </ul>
-        {#            {% if current_user.is_authenticated %}#}
-        {#                <ul class="nav pull-right">#}
-        {#                    <li class="nav-item"><a href="/accounts/settings/pro/"><i class="fa fa-rocket"></i><span#}
-        {#                            class="visible-large">升级</span></a></li>#}
-        {#                    <li class="nav-item "><a href="/upload/"><i class="fa fa-upload" aria-hidden="true"></i><span#}
-        {#                            class="visible-large">上传</span></a></li>#}
-        {#                    <li class="nav-item ">#}
-        {#                        <a href="/notifications/">#}
-        {#                            <i class="fa fa-bell" aria-hidden="true"></i>#}
-        {#                            <span class="visible-large">通知</span>#}
-        {##}
-        {#                        </a>#}
-        {#                    </li>#}
-        {#                </ul>#}
-        {#            {% else %}#}
-        {#            {% endif %}#}
+<nav id="site-nav" class="navbar navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+                <img class="navbar-logo" src="/images/bazel-navbar.svg">
+            </a>
+        </div>
+        <div class="collapse navbar-collapse" id="menu">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="https://docs.bazel.build">Documentation</a>
+                </li>
+                <li>
+                    <a href="/contributing.html">Contribute</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-original-title="">
+                                    <span class="ribbon-wrapper">
+                                        <span class="ribbon-wrapper-green"><div
+                                                class="ribbon-green hidden">Pro</div></span>
+                                        <img class="img img-circle avatar-small" title="simonli"
+                                             src="/static/img/babel.png"/>
+                                    </span>
+                        <b class="caret"></b>
+                    </a>
+                    <ul id='account-dropdown' class="dropdown-menu">
+                        <li><a href="/accounts/profile/simonli/wish/"><i class="icon-user"
+                                                                         aria-hidden="true"></i>个人中心</a>
+                        </li>
+                        <li><a href="/accounts/settings/push/"><i class="icon-cog"></i> 设置</a></li>
+                        <li><a href="/faq/"><i class="icon-question-sign"></i> 常见问题</a></li>
+                        <li><a href="#wechat-qrcode" role="button" data-toggle="modal"><i class="icon-qrcode"></i>微信公众号</a>
+                        </li>
+                        <li><a href="http://forum.readfree.me/" target="_blank"><i
+                                class="fa fa-comments-o"></i>论坛</a></li>
+                        <li><a href="{{ url_for('account.logout') }}"><i class="icon-off"></i> 退出</a></li>
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
+
+
+    </div>
 </nav>
 
 
