--- a/bookstore/templates/frontend/upload.html
+++ b/bookstore/templates/frontend/upload.html
@@ -21,7 +21,7 @@
                     <tr class="required">
                         <td>文件:</td>
                         <td>{{ form.book_file }}
-                            <span>支持mobi,epub,pdf,txt格式，不超过100MB.</span>
+                            <p class="help-block">支持mobi,epub,pdf,txt格式，不超过100MB.</p>
                             {{ render_errors(form.book_file) }}
                         </td>
                     </tr>
