--- a/bookstore/static/css/site.css
+++ b/bookstore/static/css/site.css
@@ -1,77 +1,36 @@
-
-.navbar-inverse {
-    margin-bottom: 0;
-    background-color: #43a047;
-    border-bottom: 1px solid #43a047;
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
-.navbar-inverse .navbar-brand {
-    padding-top: 12px;
+/* Wrapping element */
+/* Set some basic padding to keep content from hitting the edges */
+.body-content {
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.navbar-inverse .navbar-brand .navbar-logo {
-    height: 28px;
+/* Carousel */
+.carousel-caption p {
+    font-size: 20px;
+    line-height: 1.4;
 }
 
-.navbar-inverse a.navbar-brand {
-    color: #fff;
+/* Make .svg files in the carousel display properly in older browsers */
+.carousel-inner .item img[src$=".svg"] {
+    width: 100%;
 }
 
-.navbar-inverse a.navbar-brand:focus, .navbar-inverse a.navbar-brand:hover {
-    color: #444;
-    background-color: #43a047;
+/* QR code generator */
+#qrCode {
+    margin: 15px;
 }
 
-.navbar-inverse .navbar-nav > li > a {
-    color: #fff;
-}
-
-.navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
-    color: #444;
-    background-color: #76d275;
-}
-
-.navbar-inverse .navbar-nav .nav-icon {
-    font-size: 18px;
-}
-
-.navbar-inverse .navbar-nav > li.active > a {
-    background-color: #76d275;
-}
-
-.navbar-inverse .navbar-nav > li.active > a:focus, .navbar-inverse .navbar-nav > li.active > a:hover {
-    background-color: #76d275;
-}
-
-.navbar-inverse .navbar-form {
-    border-color: #43a047;
-}
-
-.navbar-inverse .navbar-form .input-sm {
-    margin-top: 2px;
-}
-
-.navbar-inverse .navbar-form input[type="search"] {
-    background-color: #76d275;
-    border-color: #43a047;
-}
-
-.navbar-inverse .navbar-form input[type="search"]::placeholder {
-    color: #fff;
-}
-
-.navbar-inverse .navbar-form input[type="search"]:focus, .navbar-inverse .navbar-form input[type="search"]:active {
-    background-color: #fff;
-}
-
-.navbar-inverse .navbar-toggle {
-    border: 1px solid #43a047;
-}
-
-.navbar-inverse .navbar-toggle.active, .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
-    background-color: #76d275;
-}
-
-.navbar-inverse .navbar-collapse {
-    border-color: #43a047;
+/* Hide/rearrange for smaller screens */
+@media screen and (max-width: 767px) {
+    /* Hide captions */
+    .carousel-caption {
+        display: none;
+    }
 }
