--- a/bookstore/templates/_macros.html
+++ b/bookstore/templates/_macros.html
@@ -1,11 +1,11 @@
-{% macro render_field2(field, left_class='col-md-2', right_class='col-md-5',label=None, label_visible=true ) -%}
+{% macro render_field_horizontal(field, left_col='col-md-2', right_col='col-md-5',label=None, label_visible=true ) -%}
     <div class="form-group {% if field.errors %}has-error{% endif %} {{ kwargs.pop('class_', '') }}">
         {% if field.type != 'HiddenField' and label_visible %}
             {% if not label %}{% set label=field.label.text %}{% endif %}
-            <label for="{{ field.id }}" class="control-label {{ left_class }}">{{ label|safe }}</label>
+            <label for="{{ field.id }}" class="control-label {{ left_col }}">{{ label|safe }}</label>
         {% endif %}
-        {% if right_class !='' %}
-            <div class="{{ right_class }}">
+        {% if right_col !='' %}
+            <div class="{{ right_col }}">
         {% endif %}
         {{ field(class_='form-control', **kwargs) }}
         {% if field.errors %}
@@ -13,7 +13,7 @@
                 <p class="help-block">{{ e }}</p>
             {% endfor %}
         {% endif %}
-        {% if right_class !='' %}
+        {% if right_col !='' %}
             </div>
         {% endif %}
     </div>
@@ -36,30 +36,31 @@
 {%- endmacro %}
 
 
+
 {% macro render_errors(field) -%}
     {% if field.errors %}
-        {% for e in field.errors %}
+        {% for e in field.errors%}
             <p class="help-block">{{ e }}</p>
         {% endfor %}
     {% endif %}
 {%- endmacro %}
 
-{% macro render_submit_field(field, label=None) -%}
+{% macro render_submit(field, label=None) -%}
     {% if not label %}{% set label=field.label.text %}{% endif %}
     <div class="form-group {% if field.errors %}has-error{% endif %} {{ kwargs.pop('class_', '') }}">
-        <input type="submit" class="form-control" value="{{ label }}">
+        <input type="submit" class="btn btn-default" value="{{ label }}">
     </div>
 {%- endmacro %}
 
 
-{% macro render_submit_field2(field, right_class='col-md-offset-2 col-md-1', label=None) -%}
+{% macro render_submit_horizontal(field, right_col='col-md-offset-2 col-md-1', label=None) -%}
     {% if not label %}{% set label=field.label.text %}{% endif %}
     <div class="form-group {% if field.errors %}has-error{% endif %} {{ kwargs.pop('class_', '') }}">
-        {% if right_class !='' %}
-            <div class="{{ right_class }}">
+        {% if right_col !='' %}
+            <div class="{{ right_col }}">
         {% endif %}
         <input type="submit" class="form-control" value="{{ label }}">
-        {% if right_class !='' %}
+        {% if right_col !='' %}
             </div>
         {% endif %}
     </div>
